ecmascript/parser/tests/typescript-errors/tsc/async/es2017/functionDeclarations/asyncFunctionDeclaration5_es2017/input.ts.stderr
error: Expected ident
 --> $DIR/tests/typescript-errors/tsc/async/es2017/functionDeclarations/asyncFunctionDeclaration5_es2017/input.ts:3:20
  |
3 | async function foo(await): Promise<void> {
  |                    ^^^^^

